--- a/Act1/MDK-ARM/NUCLEO-F103RB/NUCLEO-F103RB.build_log.htm
+++ b/Act1/MDK-ARM/NUCLEO-F103RB/NUCLEO-F103RB.build_log.htm
@@ -22,23 +22,23 @@ Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 D:\Cours\BE_STM32_initiation\Act1\MDK-ARM\Project.uvprojx
-Project File Date:  09/11/2020
+Project File Date:  09/18/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Simulateur'
-compiling MyTimer.c...
 compiling Chrono.c...
-..\Services\Chrono.c(18): warning:  #550-D: variable "Chrono_Timer"  was set but never used
-  static TIM_TypeDef * Chrono_Timer=TIM1; // init par défaut au cas où l'utilisateur ne lance pas Chrono_Conf avant toute autre fct.
-..\Services\Chrono.c: 1 warning, 0 errors
+compiling MyTimer.c...
+..\MyDrivers\MyTimer.c(91): warning:  #1-D: last line of file ends without a newline
+  }
+..\MyDrivers\MyTimer.c: 1 warning, 0 errors
 compiling main.c...
-compiling stm32f1xx_ll_rcc.c...
 compiling system_stm32f1xx.c...
-compiling stm32f1xx_ll_utils.c...
+compiling stm32f1xx_ll_rcc.c...
 assembling startup_stm32f103xb.s...
+compiling stm32f1xx_ll_utils.c...
 linking...
-Program Size: Code=428 RO-data=268 RW-data=12 ZI-data=1028  
+Program Size: Code=748 RO-data=268 RW-data=12 ZI-data=1028  
 "NUCLEO-F103RB\NUCLEO-F103RB.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
