--- a/Act1/MDK-ARM/NUCLEO-F103RB/NUCLEO-F103RB.build_log.htm
+++ b/Act1/MDK-ARM/NUCLEO-F103RB/NUCLEO-F103RB.build_log.htm
@@ -27,19 +27,34 @@ Project File Date:  09/18/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Simulateur'
+compiling main.c...
+../Src/main.c(24): error:  #147: declaration is incompatible with "void (*TIM1_handler)(void)"  (declared at line 15 of "..\Services\Chrono.h")
+  void TIM1_handler() {
+../Src/main.c(25): warning:  #177-D: variable "test"  was declared but never referenced
+  	int test = 0;
+../Src/main.c(27): error:  #147: declaration is incompatible with "void (*TIM2_handler)(void)"  (declared at line 16 of "..\Services\Chrono.h")
+  void TIM2_handler() {
+../Src/main.c(28): warning:  #177-D: variable "test"  was declared but never referenced
+  	int test = 0;
+../Src/main.c(30): error:  #147: declaration is incompatible with "void (*TIM3_handler)(void)"  (declared at line 17 of "..\Services\Chrono.h")
+  void TIM3_handler() {
+../Src/main.c(31): warning:  #177-D: variable "test"  was declared but never referenced
+  	int test = 0;
+../Src/main.c(33): error:  #147: declaration is incompatible with "void (*TIM4_handler)(void)"  (declared at line 18 of "..\Services\Chrono.h")
+  void TIM4_handler() {
+../Src/main.c(34): warning:  #177-D: variable "test"  was declared but never referenced
+  	int test = 0;
+../Src/main.c: 4 warnings, 4 errors
 compiling Chrono.c...
 compiling MyTimer.c...
-..\MyDrivers\MyTimer.c(91): warning:  #1-D: last line of file ends without a newline
+..\MyDrivers\MyTimer.c(155): warning:  #1-D: last line of file ends without a newline
   }
 ..\MyDrivers\MyTimer.c: 1 warning, 0 errors
-compiling main.c...
 compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_utils.c...
 compiling stm32f1xx_ll_rcc.c...
 assembling startup_stm32f103xb.s...
-compiling stm32f1xx_ll_utils.c...
-linking...
-Program Size: Code=748 RO-data=268 RW-data=12 ZI-data=1028  
-"NUCLEO-F103RB\NUCLEO-F103RB.axf" - 0 Error(s), 1 Warning(s).
+"NUCLEO-F103RB\NUCLEO-F103RB.axf" - 4 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -62,7 +77,8 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:03
+Target not created.
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
